{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 62,
  "lineage": "52048d5b-e4b4-b4c0-ff2b-c25701cca307",
  "resources": [
    {
      "module": "module.vmseries[\"fw-1\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "PA-VM-firewall01-mgmt",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkInterfaces/PA-VM-firewall01-mgmt-nic",
            "internal_domain_name_suffix": "i3wfl3dzwpwenf0dfdokmswzcd.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/PA-VM-firewall01-mgmt-pip",
                "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet"
              }
            ],
            "location": "northeurope",
            "name": "PA-VM-firewall01-mgmt-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "Palo-RG-PN-FW",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_availability_set.this",
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "local_file.bootstrap_xml",
            "module.bootstrap.azurerm_storage_account.this",
            "module.bootstrap.azurerm_storage_share.this",
            "module.bootstrap.azurerm_storage_share_directory.this",
            "module.bootstrap.azurerm_storage_share_file.this",
            "module.bootstrap.data.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_share.this",
            "module.bootstrap_share.azurerm_storage_share_directory.this",
            "module.bootstrap_share.azurerm_storage_share_file.this",
            "module.bootstrap_share.data.azurerm_storage_account.this",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_backend",
            "module.load_balancer.azurerm_lb_outbound_rule.out_rules",
            "module.load_balancer.azurerm_lb_probe.probe",
            "module.load_balancer.azurerm_lb_rule.in_rules",
            "module.load_balancer.azurerm_network_security_rule.allow_inbound_ips",
            "module.load_balancer.azurerm_public_ip.this",
            "module.load_balancer.data.azurerm_public_ip.this",
            "module.vmseries.azurerm_public_ip.this",
            "module.vmseries.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "PA-VM-firewall01-trust",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkInterfaces/PA-VM-firewall01-trust-nic",
            "internal_domain_name_suffix": "i3wfl3dzwpwenf0dfdokmswzcd.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.1.3.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet"
              }
            ],
            "location": "northeurope",
            "name": "PA-VM-firewall01-trust-nic",
            "private_ip_address": "10.1.3.11",
            "private_ip_addresses": [
              "10.1.3.11"
            ],
            "resource_group_name": "Palo-RG-PN-FW",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_availability_set.this",
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "local_file.bootstrap_xml",
            "module.bootstrap.azurerm_storage_account.this",
            "module.bootstrap.azurerm_storage_share.this",
            "module.bootstrap.azurerm_storage_share_directory.this",
            "module.bootstrap.azurerm_storage_share_file.this",
            "module.bootstrap.data.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_share.this",
            "module.bootstrap_share.azurerm_storage_share_directory.this",
            "module.bootstrap_share.azurerm_storage_share_file.this",
            "module.bootstrap_share.data.azurerm_storage_account.this",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_backend",
            "module.load_balancer.azurerm_lb_outbound_rule.out_rules",
            "module.load_balancer.azurerm_lb_probe.probe",
            "module.load_balancer.azurerm_lb_rule.in_rules",
            "module.load_balancer.azurerm_network_security_rule.allow_inbound_ips",
            "module.load_balancer.azurerm_public_ip.this",
            "module.load_balancer.data.azurerm_public_ip.this",
            "module.vmseries.azurerm_public_ip.this",
            "module.vmseries.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "PA-VM-firewall01-untrust",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkInterfaces/PA-VM-firewall01-untrust-nic",
            "internal_domain_name_suffix": "i3wfl3dzwpwenf0dfdokmswzcd.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.1.2.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/PA-VM-firewall01-untrust-pip",
                "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet"
              }
            ],
            "location": "northeurope",
            "name": "PA-VM-firewall01-untrust-nic",
            "private_ip_address": "10.1.2.11",
            "private_ip_addresses": [
              "10.1.2.11"
            ],
            "resource_group_name": "Palo-RG-PN-FW",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_availability_set.this",
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "local_file.bootstrap_xml",
            "module.bootstrap.azurerm_storage_account.this",
            "module.bootstrap.azurerm_storage_share.this",
            "module.bootstrap.azurerm_storage_share_directory.this",
            "module.bootstrap.azurerm_storage_share_file.this",
            "module.bootstrap.data.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_share.this",
            "module.bootstrap_share.azurerm_storage_share_directory.this",
            "module.bootstrap_share.azurerm_storage_share_file.this",
            "module.bootstrap_share.data.azurerm_storage_account.this",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_backend",
            "module.load_balancer.azurerm_lb_outbound_rule.out_rules",
            "module.load_balancer.azurerm_lb_probe.probe",
            "module.load_balancer.azurerm_lb_rule.in_rules",
            "module.load_balancer.azurerm_network_security_rule.allow_inbound_ips",
            "module.load_balancer.azurerm_public_ip.this",
            "module.load_balancer.data.azurerm_public_ip.this",
            "module.vmseries.azurerm_public_ip.this",
            "module.vmseries.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"fw-1\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "PA-VM-firewall01-mgmt",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/PA-VM-firewall01-mgmt-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.84.74",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "PA-VM-firewall01-mgmt-pip",
            "resource_group_name": "Palo-RG-PN-FW",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_availability_set.this",
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "local_file.bootstrap_xml",
            "module.bootstrap.azurerm_storage_account.this",
            "module.bootstrap.azurerm_storage_share.this",
            "module.bootstrap.azurerm_storage_share_directory.this",
            "module.bootstrap.azurerm_storage_share_file.this",
            "module.bootstrap.data.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_share.this",
            "module.bootstrap_share.azurerm_storage_share_directory.this",
            "module.bootstrap_share.azurerm_storage_share_file.this",
            "module.bootstrap_share.data.azurerm_storage_account.this",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_backend",
            "module.load_balancer.azurerm_lb_outbound_rule.out_rules",
            "module.load_balancer.azurerm_lb_probe.probe",
            "module.load_balancer.azurerm_lb_rule.in_rules",
            "module.load_balancer.azurerm_network_security_rule.allow_inbound_ips",
            "module.load_balancer.azurerm_public_ip.this",
            "module.load_balancer.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "PA-VM-firewall01-untrust",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/PA-VM-firewall01-untrust-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.135.202.236",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "PA-VM-firewall01-untrust-pip",
            "resource_group_name": "Palo-RG-PN-FW",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_availability_set.this",
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "local_file.bootstrap_xml",
            "module.bootstrap.azurerm_storage_account.this",
            "module.bootstrap.azurerm_storage_share.this",
            "module.bootstrap.azurerm_storage_share_directory.this",
            "module.bootstrap.azurerm_storage_share_file.this",
            "module.bootstrap.data.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_account.this",
            "module.bootstrap_share.azurerm_storage_share.this",
            "module.bootstrap_share.azurerm_storage_share_directory.this",
            "module.bootstrap_share.azurerm_storage_share_file.this",
            "module.bootstrap_share.data.azurerm_storage_account.this",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_backend",
            "module.load_balancer.azurerm_lb_outbound_rule.out_rules",
            "module.load_balancer.azurerm_lb_probe.probe",
            "module.load_balancer.azurerm_lb_rule.in_rules",
            "module.load_balancer.azurerm_network_security_rule.allow_inbound_ips",
            "module.load_balancer.azurerm_public_ip.this",
            "module.load_balancer.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"transit\"]",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet",
            "name": "mgmt-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          }
        },
        {
          "index_key": "trust",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet",
            "name": "trust-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          }
        },
        {
          "index_key": "untrust",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet",
            "name": "untrust-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          }
        }
      ]
    },
    {
      "module": "module.vnet[\"transit\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "f4556c47-b379-46ec-9743-28dca64ad913",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet",
            "location": "northeurope",
            "name": "Palo-panorama-vnet",
            "resource_group_name": "Palo-RG-PN-FW",
            "subnets": [
              "mgmt-snet",
              "trust-snet",
              "untrust-snet"
            ],
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.vnet[\"transit\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "management",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/PA-VM-mgmt-nsg",
            "location": "northeurope",
            "name": "PA-VM-mgmt-nsg",
            "resource_group_name": "Palo-RG-PN-FW",
            "security_rule": [],
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"transit\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "management-vmseries_mgmt_allow_inbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/28",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/PA-VM-mgmt-nsg/securityRules/vmseries_mgmt_allow_inbound",
            "name": "vmseries_mgmt_allow_inbound",
            "network_security_group_name": "PA-VM-mgmt-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Palo-RG-PN-FW",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this"
          ]
        }
      ]
    }
  ]
}